# cybersecurity-forefront

./: .env.example  .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflow/: ifc-workflow.yml
docker/: Dockerfile
src/adapters/authentication/: firebase_adapter.py
src/adapters/websocket/socketio_events/: base_event.py  connect_event.py  message_event.py
src/application/api/blueprints/: rest.py  websocket.py
src/application/api/factories/: app_factory.py  socket_factory.py
src/application/api/rest/: healthcheck_handler.py  registration_handler.py
src/application/api/socket/: socket_controller.py
src/config/: forefront_metadata.py  loader.py
src/config/resources/: config.yml  logging.yml  rest.yml
src/core/services/: service_boostrap.py
src/core/services/authentication/: firebase_service.py
src/core/services/health/: health_service.py
src/infrastructure/authentication/: firebase_client.py
tests/: test_firebase_service.py
utils/: logger.py
